# embLinux

./: .gitignore  README.md
C++_ConcurrencyInAction/designConcurrentCode/: introduction.md  quickSort.hpp
C++_ConcurrencyInAction/designLockBase/: dataStructures.hpp  design.md  introduction.md
C++_ConcurrencyInAction/designLockFree/: dataStructures.hpp  design.md  introduction.md
C++_ConcurrencyInAction/memory_atomicOperation/: introduction.md  treiberStack.cpp
C++_ConcurrencyInAction/memory_atomicOperation/Notes/: atomicOperations.md  memModelBasic.md  threadObservingOthers.md
C++_ConcurrencyInAction/synchronizingConcurrency/: taskBased.cpp
C++_ConcurrencyInAction/synchronizingConcurrency/Notes/: howToCode.md  waitingConditions.md  waitingFuture.md  waitingTimeout.md
C++_ConcurrencyInAction/threads/: sharingDataBetweenThreads.md  threadsCycle.md
LSPI/lib/: LIB.md  ename.c.inc  syscall_speed.c
LSPI/syntax/: CMakeLists.txt
LSPI/syntax/01_io/: Notes.md  main.c
LSPI/syntax/02_process/: Notes.md  miniShell.c
LSPI/syntax/03_signal/: Notes.md
LSPI/syntax/04_ipc/FIFO_Pipes/: FIFO_Pipes.md  nonBlockingReadServer.c  writeClient.c
LSPI/syntax/04_ipc/POSIX_Standard/: Notes.md  msQueue.c  selfSynchronize.c
LSPI/syntax/04_ipc/memoryMapping/: cat.c  mmap.md
LSPI/syntax/04_ipc/timer/: Notes.md  eventDriven.c
LSPI/syntax/05_threads/: Notes.md  task_queue.c
